checking in final notebooks and comment updates

--- a/NLP/assignment3/assignment3_task2_1.ipynb
+++ b/NLP/assignment3/assignment3_task2_1.ipynb
@@ -207,9 +207,7 @@
    "source": [
     "## Create model\n",
     "\n",
-    "I will use \"ConvNet Architectures\" guidelines from Stanford \"CS231n: Convolutional Neural Networks for Visual Recognition\" class guidelines: http://cs231n.github.io/convolutional-networks/ <br>\n",
-    "\"INPUT -> [[CONV -> RELU]*N -> POOL?]*M -> [FC -> RELU]*K -> FC <br>\n",
-    "where the * indicates repetition, and the POOL? indicates an optional pooling layer. Moreover, N >= 0 (and usually N <= 3), M >= 0, K >= 0 (and usually K < 3)...\""
+    "LSTM model."
    ]
   },
   {
