--- a/NLP/assignment4/Task2_DLSTM.ipynb
+++ b/NLP/assignment4/Task2_DLSTM.ipynb
@@ -4,14 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Benchmark \n",
+    "# Assignment 4\n",
     "\n",
-    "Implementing first part of solution described here: \n",
-    "\"Franck Dernoncourt, Ji Young Lee, and Peter\n",
-    "Szolovits. 2016. Neural networks for joint sentence\n",
-    "classification in medical paper abstracts. European\n",
-    "Chapter of the Association for Computational Linguistics\n",
-    "(EACL) 2017.\""
+    "## Task c - Extended model (DLSTM)"
    ]
   },
   {
